--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shantanusethreal.github.io/crypto",
+  "homepage": ".",
   "name": "cryptolatest",
   "version": "0.1.0",
   "private": true,
