--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cryptolatest",
+  "homepage": "https://ShantanuSethReal.github.io/Cryptod",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
