--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cryptolatest",
   "homepage": "https://shantanusethreal.github.io/Cryptod",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
